refactor: replace custom URL with native URI class