@@ -1,7 +1,8 @@
 package pt.uc.dei.student.tmdbts.search_engine.client;
 
-import pt.uc.dei.student.tmdbts.search_engine.URL;
 import pt.uc.dei.student.tmdbts.search_engine.gateway.Gateway;
+
+import java.net.URI;
 import java.rmi.Naming;
 import java.rmi.RemoteException;
 import java.rmi.server.UnicastRemoteObject;
@@ -20,8 +21,8 @@ public class ClientImpl extends UnicastRemoteObject{
             while (true){
                 System.out.print("Welcome to Search Engine!\nEnter your query or URL to index -> ");
                 String query = sc.nextLine();
-                if (query.startsWith("https://")){
-                    URL url = new URL(query);
+                if (query.startsWith("https://")) {
+                    URI url = new URI(query);
                     gateway.addURL(url);
                     System.out.println("URL requested for indexing: " + query);
                 } else {
